...
        Row(
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.Center,
            modifier = Modifier.fillMaxWidth(),
        ) {
            IconButton(onClick = onSkipPreviousClick, modifier = Modifier.size(36.dp)) {
                Icon(PhosphorIcons.SkipBack, "Previous", tint = MellowTheme.colors.foreground, modifier = Modifier.size(22.dp))
            }

            Spacer(Modifier.width(MellowSpacing.Sp4))

            Slider(
                value = displayProgress.coerceIn(0f, 1f),
...
                tint = MellowTheme.colors.foreground,
            )

            Spacer(Modifier.width(MellowSpacing.Sp4))

            IconButton(onClick = onSkipNextClick, modifier = Modifier.size(36.dp)) {
                Icon(PhosphorIcons.SkipForward, "Next", tint = MellowTheme.colors.foreground, modifier = Modifier.size(22.dp))
            }
        }

        Row(
            horizontalArrangement = Arrangement.SpaceBetween,
            modifier = Modifier
...
